--- a/PraiseHim.Tools.Mp3TagEditor/Views/MainWindow.xaml
+++ b/PraiseHim.Tools.Mp3TagEditor/Views/MainWindow.xaml
@@ -1,9 +1,12 @@
-﻿<Controls:MetroWindow
+﻿<MahApps:MetroWindow
     x:Class="PraiseHim.Tools.Mp3TagEditor.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+    xmlns:MahApps="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+    xmlns:controls="clr-namespace:PraiseHim.Tools.Mp3TagEditor.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:extension="clr-namespace:PraiseHim.Tools.Mp3TagEditor.Extensions"
+    xmlns:local="clr-namespace:PraiseHim.Tools.Mp3TagEditor"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="MainWindow"
     Width="525"
@@ -11,15 +14,72 @@
     DataContext="{Binding MainViewModel, Source={StaticResource Locator}}"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
-    <Controls:MetroWindow.RightWindowCommands>
-        <Controls:WindowCommands>
+    <MahApps:MetroWindow.RightWindowCommands>
+        <MahApps:WindowCommands>
             <Button Content="settings" />
-        </Controls:WindowCommands>
-    </Controls:MetroWindow.RightWindowCommands>
-    <Grid>
+        </MahApps:WindowCommands>
+    </MahApps:MetroWindow.RightWindowCommands>
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <controls:FolderPicker AllFiles="{Binding AllFiles, Mode=OneWayToSource}" />
+        <GroupBox
+            Grid.Row="1"
+            Margin="0"
+            Header="Info">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" MinWidth="80" />
+                    <ColumnDefinition Width="10" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <TextBlock VerticalAlignment="Center" Text="Title:" />
+                <ComboBox
+                    Grid.Column="2"
+                    MinWidth="100"
+                    DisplayMemberPath="Description"
+                    ItemsSource="{Binding Source={extension:Enumeration {x:Type local:TitleOptions}}}"
+                    SelectedValue="{Binding CurrentTagInfo.TitleOption}"
+                    SelectedValuePath="Value" />
+
+                <TextBlock
+                    Grid.Row="1"
+                    VerticalAlignment="Center"
+                    Text="Album:" />
+                <TextBox
+                    Grid.Row="1"
+                    Grid.Column="2"
+                    Width="200"
+                    Margin="0,10,0,0"
+                    Text="{Binding CurrentTagInfo.Album, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock
+                    Grid.Row="2"
+                    VerticalAlignment="Center"
+                    Text="Author:" />
+                <TextBox
+                    Grid.Row="2"
+                    Grid.Column="2"
+                    Width="200"
+                    Margin="0,10,0,0"
+                    Text="{Binding CurrentTagInfo.Author}" />
+            </Grid>
+        </GroupBox>
+
         <Button
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            Content="OK" />
+            Grid.Row="2"
+            Width="80"
+            Margin="0,10,0,0"
+            HorizontalAlignment="Right"
+            Command="{Binding EditTagInfoCommand}"
+            Content="Edit" />
     </Grid>
-</Controls:MetroWindow>
+</MahApps:MetroWindow>
